tests/specs/private_type_in_namespace.txt
# mod.ts
namespace Test {
  export class Other {}
}

export interface Output {
  other: Test.Other;
}

# diagnostics
error[private-type-ref]: public type 'Output["other"]' references private type 'Test'
 --> /mod.ts:6:3
  | 
6 |   other: Test.Other;
  |   ^
  = hint: make the referenced type public or remove the reference
  | 
1 | namespace Test {
  | - this is the referenced type

  info: to ensure documentation is complete all types that are exposed in the public API must be public


error[private-type-ref]: public type 'Output["other"]' references private type 'Test.Other'
 --> /mod.ts:6:3
  | 
6 |   other: Test.Other;
  |   ^
  = hint: make the referenced type public or remove the reference
  | 
2 |   export class Other {}
  |   - this is the referenced type

  info: to ensure documentation is complete all types that are exposed in the public API must be public


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:5:1
  | 
5 | export interface Output {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:6:3
  | 
6 |   other: Test.Other;
  |   ^


# output.txt
Defined in file:///mod.ts:5:1

interface Output

  other: Test.Other

Defined in file:///mod.ts:1:1

private namespace Test

  class Other


# output.json
[
  {
    "kind": "interface",
    "name": "Output",
    "location": {
      "filename": "file:///mod.ts",
      "line": 5,
      "col": 0,
      "byteIndex": 44
    },
    "declarationKind": "export",
    "interfaceDef": {
      "extends": [],
      "constructors": [],
      "methods": [],
      "properties": [
        {
          "name": "other",
          "location": {
            "filename": "file:///mod.ts",
            "line": 6,
            "col": 2,
            "byteIndex": 72
          },
          "params": [],
          "computed": false,
          "optional": false,
          "tsType": {
            "repr": "Test.Other",
            "kind": "typeRef",
            "typeRef": {
              "typeParams": null,
              "typeName": "Test.Other"
            }
          },
          "typeParams": []
        }
      ],
      "callSignatures": [],
      "indexSignatures": [],
      "typeParams": []
    }
  },
  {
    "kind": "namespace",
    "name": "Test",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "private",
    "namespaceDef": {
      "elements": [
        {
          "kind": "class",
          "name": "Other",
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 19
          },
          "declarationKind": "export",
          "classDef": {
            "isAbstract": false,
            "constructors": [],
            "properties": [],
            "indexSignatures": [],
            "methods": [],
            "extends": null,
            "implements": [],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    }
  }
]
